--- a/Computer Architecture/시간복잡도.md
+++ b/Computer Architecture/시간복잡도.md
@@ -53,7 +53,9 @@ Tag: 복잡도
                      (빠름) 상수함수 < 로그함수 < 선형함수 < 다항함수 < 지수함수(느림)
 
 
-<img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" />
+<img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+  width="30%"
+  height="30%" />
 
 1. **O(1) [constant complexity]**
     
