시간복잡도.md

--- a/Computer Architecture/시간복잡도.md
+++ b/Computer Architecture/시간복잡도.md
@@ -21,7 +21,7 @@ Tag: 복잡도
 - **Big-Ω(빅 오메가) 표기법** : (하한 점근) 
 알고리즘 **최상**의 실행 시간을 표기한다.
 - **Big-θ(빅 세타) 표기법** : (상한 - 하한 평균) 
-****알고리즘 **평균** 실행 시간을 표기한다.
+알고리즘 **평균** 실행 시간을 표기한다.
 
 ## 🅾️ 빅오 표기법 특징
 
@@ -52,11 +52,11 @@ Tag: 복잡도
 
                      (빠름) 상수함수 < 로그함수 < 선형함수 < 다항함수 < 지수함수(느림)
 
-
+<center>
 <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
-  width="30%"
-  height="30%" />
-
+  width="50%"
+  height="50%" />
+</center>
 1. **O(1) [constant complexity]**
     
     입력값(N)의 크기에 관계없이 즉시 출력값 얻을 수 있음.
