시간복잡도.md

--- a/Computer Architecture/시간복잡도.md
+++ b/Computer Architecture/시간복잡도.md
@@ -57,6 +57,7 @@ Tag: 복잡도
   width="50%"
   height="50%" />
 </center>
+
 1. **O(1) [constant complexity]**
     
     입력값(N)의 크기에 관계없이 즉시 출력값 얻을 수 있음.
@@ -85,7 +86,11 @@ Tag: 복잡도
     
     입력값(N)이 증가함에 따라 시간이 **n의 제곱수의 비율로 증가**하는 알고리즘.
     
-    ![Untitled](%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%87%E1%85%A9%E1%86%A8%E1%84%8C%E1%85%A1%E1%86%B8%E1%84%83%E1%85%A9%20278d9f150feb4465b6284b3fabfe1eb5/Untitled%201.png)
+    <center>
+     <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled%202.png" 
+  width="50%"
+  height="50%" />
+    </center>
     
     ex) `2중 For 문`, `삽입/거품/선택 정렬`
     
