시간복잡도.md

--- a/Computer Architecture/시간복잡도.md
+++ b/Computer Architecture/시간복잡도.md
@@ -86,11 +86,11 @@ Tag: 복잡도
     
     입력값(N)이 증가함에 따라 시간이 **n의 제곱수의 비율로 증가**하는 알고리즘.
     
-    <center>
-     <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled%202.png" 
-  width="50%"
-  height="50%" />
-    </center>
+   <center>
+    <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled%201.png"
+    width="50%"
+    height="50%" />
+   </center>
     
     ex) `2중 For 문`, `삽입/거품/선택 정렬`
     
@@ -98,6 +98,10 @@ Tag: 복잡도
     
     빅오 표기법 중 **가장 느린 시간 복잡도**로 주로 재귀적으로 수행하는 알고리즘이 이에 해당
     
-    ![Untitled](%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%87%E1%85%A9%E1%86%A8%E1%84%8C%E1%85%A1%E1%86%B8%E1%84%83%E1%85%A9%20278d9f150feb4465b6284b3fabfe1eb5/Untitled%202.png)
+   <center>
+    <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+    width="50%"
+    height="35%" />
+   </center>
     
     ex) `fibonacci 수열`
