시간복잡도.md

--- a/Computer Architecture/시간복잡도.md
+++ b/Computer Architecture/시간복잡도.md
@@ -53,7 +53,7 @@ Tag: 복잡도
                      (빠름) 상수함수 < 로그함수 < 선형함수 < 다항함수 < 지수함수(느림)
 
 <center>
-<img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
   width="50%"
   height="50%" />
 </center>
@@ -88,8 +88,8 @@ Tag: 복잡도
     
    <center>
     <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled%201.png"
-    width="50%"
-    height="50%" />
+    width="35%"
+    height="35%" />
    </center>
     
     ex) `2중 For 문`, `삽입/거품/선택 정렬`
@@ -99,9 +99,9 @@ Tag: 복잡도
     빅오 표기법 중 **가장 느린 시간 복잡도**로 주로 재귀적으로 수행하는 알고리즘이 이에 해당
     
    <center>
-    <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
-    width="50%"
-    height="35%" />
+    <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled%202.png"
+    width="40%"
+    height="25%" />
    </center>
     
     ex) `fibonacci 수열`
