시간복잡도.md

--- a/Computer Architecture/시간복잡도.md
+++ b/Computer Architecture/시간복잡도.md
@@ -5,7 +5,7 @@ Tag: 복잡도
 ## 📖 요약
 
 <aside>
- 알고리즘의 복잡도를 판단하는 척도는 **시간 복잡도** 와 **공간 복잡도** 가 있다.
+ 알고리즘의 복잡도를 판단하는 척도는 시간 복잡도와 공간 복잡도가 있다.
 시간 복잡도는 알고리즘 내 연산의 횟수와 밀접한 관계가 있다.
 
 </aside>
