--- a/Computer Architecture/연결리스트.md
+++ b/Computer Architecture/연결리스트.md
@@ -1,8 +1,5 @@
 # 연결 리스트
 
-사람: yul2
-상태: 진행 중
-선택: 자료구조
 Tag: 선형 자료 구조
 
 ## 📖 요약
@@ -15,11 +12,13 @@ Tag: 선형 자료 구조
 ## 🔗 연결리스트 [Linked list]
 
 > 연속된 **노드(Node)**의 연결 ( 체인처럼 연결된 데이터 상자들)
-
-Node 란 연결리스트에서 사용되는 하나의 데이터 덩어리. **데이터**&**링크** 이 2가지의 필드를 담고있는 구조이다.
+>
+>Node 란 연결리스트에서 사용되는 하나의 데이터 덩어리. **데이터**&**링크** 이 2가지의 필드를 담고있는 구조이다.
 > 
 
-![Untitled](%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%80%E1%85%A7%E1%86%AF%20%E1%84%85%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3%20f1485431aaf74270a37c46a06723a7ce/Untitled.png)
+<img src='https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/node.png' />
+
+
 
 data : 노드가 담고 있는 데이터/값
 next : 링크/포인터 역할, 다음 노드의 주소를 저장
@@ -62,8 +61,8 @@ next : 링크/포인터 역할, 다음 노드의 주소를 저장
 
 - 랜덤 접근이 가능
 > 물리적인 메모리 주소가 연속
-- **배열**의 n번째 원소 방문시 **O(1)**시간 소요.
-- **원소 삽입& 삭제**는 **O(n)**시간(linear time)이 걸림
+- **배열**의 n번째 원소 방문시 **O(1)** 시간 소요.
+- **원소 삽입& 삭제**는 **O(n)** 시간(linear time)이 걸림
 
 ### 👩🏻‍💻 Python Code
 
