--- a/Computer Architecture/연결리스트.md
+++ b/Computer Architecture/연결리스트.md
@@ -14,10 +14,13 @@ Tag: 선형 자료 구조
 > 연속된 **노드(Node)**의 연결 ( 체인처럼 연결된 데이터 상자들)
 >
 >Node 란 연결리스트에서 사용되는 하나의 데이터 덩어리. **데이터**&**링크** 이 2가지의 필드를 담고있는 구조이다.
-> 
+>
 
-<img src='https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/node.png' />
-
+<center>
+	<img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/node.png" 
+		width="50%"
+		height="50%" />
+</center>
 
 
 data : 노드가 담고 있는 데이터/값
@@ -38,14 +41,22 @@ next : 링크/포인터 역할, 다음 노드의 주소를 저장
     노드마다 두개의 포인터를 관리해야하므로 데이터의 구조와 흐름이 복잡해질 수 있어.
     
 
-![Untitled](%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%80%E1%85%A7%E1%86%AF%20%E1%84%85%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3%20f1485431aaf74270a37c46a06723a7ce/Untitled%201.png)
+<center>
+	<img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/node.png" 
+		width="50%"
+		height="50%" />
+</center>
 
 - **원형 이중 연결 리스트 [Circular Doubly Linked List]**
     
     이중 연결 리스트와 같지만 마지막 노드의 next가 헤드 노드를 가르킴.
     
 
-![Untitled](%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%80%E1%85%A7%E1%86%AF%20%E1%84%85%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3%20f1485431aaf74270a37c46a06723a7ce/Untitled%202.png)
+<center>
+	<img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/node.png" 
+		width="50%"
+		height="50%" />
+</center>
 
 ## 🔗 연결 리스트 VS 배열
 
