--- a/Computer Architecture/배열.md
+++ b/Computer Architecture/배열.md
@@ -6,7 +6,8 @@ Tag: 선형 자료 구조
 ## 📖 요약
 
 <aside>
-📌 **같은 타입**의 데이터를 **연속적인 메모리 공간**에 저장해 **인덱스**로 접근하는 자료구조
+
+**같은 타입**의 데이터를 **연속적인 메모리 공간**에 저장해 **인덱스**로 접근하는 자료구조
 
 </aside>
 
@@ -65,7 +66,8 @@ Tag: 선형 자료 구조
 - 낭비 공간 가능성 있음.
 
 <aside>
-**append** (추가) : 동적 배열의 끝에 데이터를 넣을 때 쓰는 표현
+  
+**append**(추가) : 동적 배열의 끝에 데이터를 넣을 때 쓰는 표현
 
 **insertion**(삽입) : 동적 배열의 아무 위치에나 데이터를 넣어줄 때 쓰는 표현
 
