--- a/Computer Architecture/배열.md
+++ b/Computer Architecture/배열.md
@@ -30,7 +30,11 @@ Tag: 선형 자료 구조
 - 주로 **인덱스에 해당하는 원소를 빠르게 접근(탐색)해야 하거나 간단하게 데이터를 쌓고 싶을때** 사용
 - 혹은 다차원 자료구조를 다룰때
 
-![Untitled](%E1%84%87%E1%85%A2%E1%84%8B%E1%85%A7%E1%86%AF%20b11b622b6a8d4988850cdea806d09aad/Untitled.jpeg)
+<center>
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+  width="50%"
+  height="50%" />
+</center>
 
 ## 🐝 배열 장점과 단점
 
