[선형자료구조] 배열.md

--- a/Computer Architecture/배열.md
+++ b/Computer Architecture/배열.md
@@ -31,7 +31,7 @@ Tag: 선형 자료 구조
 - 혹은 다차원 자료구조를 다룰때
 
 <center>
- <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/%EB%B0%B0%EC%97%B4.jpeg" 
   width="50%"
   height="50%" />
 </center>
