--- a/Operating System/컴퓨터의 요소.md
+++ b/Operating System/컴퓨터의 요소.md
@@ -1,18 +1,5 @@
 # 컴퓨터의 요소
-
-사람: yul2
-상태: 완료
-선택: 운영체제
 Tag: 운영체제와 컴퓨터
-
-reference | [https://dheldh77.tistory.com/entry/컴퓨터구조-컴퓨터의-구성-요소](https://dheldh77.tistory.com/entry/%EC%BB%B4%ED%93%A8%ED%84%B0%EA%B5%AC%EC%A1%B0-%EC%BB%B4%ED%93%A8%ED%84%B0%EC%9D%98-%EA%B5%AC%EC%84%B1-%EC%9A%94%EC%86%8C) 
-
-[https://velog.io/@hyunji015/컴퓨터-구조-컴퓨터를-구성하는-요소](https://velog.io/@hyunji015/%EC%BB%B4%ED%93%A8%ED%84%B0-%EA%B5%AC%EC%A1%B0-%EC%BB%B4%ED%93%A8%ED%84%B0%EB%A5%BC-%EA%B5%AC%EC%84%B1%ED%95%98%EB%8A%94-%EC%9A%94%EC%86%8C) 
-
-## 📖 요약
-
-<aside>
-📌
 
 </aside>
 
@@ -26,7 +13,11 @@ ALU(산술논리연산장치), 제어장치, 레지스터로 구성된 컴퓨터
 
 인터럽트에 의해 단순히 메모리에 존재하는 **명령어를 읽고, 해석해서 실행**한다.
 
-![Untitled](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20b8e64062fdc4483791d354f18af199a6/Untitled.png)
+<center>
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+  width="50%"
+  height="50%" />
+</center>
 
 1. **ALU(산술논리연산장치)**
 데이터 처리
@@ -43,7 +34,11 @@ CPU 내부의 구성요소 간 데이터 전달과 연결을 위한 경로
 
 ### 수행과정
 
-![Untitled](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20b8e64062fdc4483791d354f18af199a6/Untitled%201.png)
+<center>
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+  width="50%"
+  height="50%" />
+</center>
 
 - `(CU)제어장치`가 메모리에 저장된 명령어를 읽어옴.
 - 읽어온 명령어는 `레지스터` 에 저장됨
@@ -95,13 +90,3 @@ IO디바이스로 인한 인터럽트
 컴퓨터 구성 요소들 간에 데이터를 전달
 3. 제어신호
 각 구성 요소간 제어 신호를 전달
-
-## 📢 예상 질문
-
-- 입출력장치 간 통신을 제어하거나, 명령어들을 읽고 해석하며 데이터 처리를 위한 순서를 결정하는 것을 무엇이라 하는가
-    
-    제어장치
-    
-- CPU의 구성요소를 말해보시오
-    
-    ALU(산술논리연산장치), 제어장치, 레지스터, 내부버스
