--- a/Operating System/컴퓨터의 요소.md
+++ b/Operating System/컴퓨터의 요소.md
@@ -14,7 +14,7 @@ ALU(산술논리연산장치), 제어장치, 레지스터로 구성된 컴퓨터
 인터럽트에 의해 단순히 메모리에 존재하는 **명령어를 읽고, 해석해서 실행**한다.
 
 <center>
- <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Operating%20System/img/cpu1.png" 
   width="50%"
   height="50%" />
 </center>
