[운영체제와 컴퓨터] 컴퓨터의 요소.md

--- a/Operating System/1-컴퓨터의 요소.md
+++ b/Operating System/1-컴퓨터의 요소.md
@@ -35,7 +35,7 @@ CPU 내부의 구성요소 간 데이터 전달과 연결을 위한 경로
 ### 수행과정
 
 <center>
- <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Computer%20Architecture/imgfile/Untitled.png" 
+ <img src="https://github.com/Yul-ia/Computer-Science/blob/main/Operating%20System/img/cpu2.png" 
   width="50%"
   height="50%" />
 </center>
