--- a/Operating System/2-컴퓨터의 요소.md
+++ b/Operating System/2-컴퓨터의 요소.md
@@ -28,7 +28,7 @@ ALU(산술논리연산장치), 제어장치, 레지스터로 구성된 컴퓨터
 3. **레지스터(Register)**
 CPU가 요청을 처리하는 데 필요한 데이터를 일시적으로 저장하는 **임시기억장치**
 CPU와 직접 연결되어 있어 연산 속도가 메모리보다 수십 배 수백 배까지 빠르다.
-(CPU느나 레지스터를 거쳐 데이터를 전달한다.)
+(CPU는 레지스터를 거쳐 데이터를 전달한다.)
 4. **내부버스(Internal Bus)**
 CPU 내부의 구성요소 간 데이터 전달과 연결을 위한 경로 
 
