1. 시간복잡도.md

--- a/Computer Architecture/1. 시간복잡도.md
+++ b/Computer Architecture/1. 시간복잡도.md
@@ -70,7 +70,7 @@ Tag: 복잡도
     
     연산이 **한 번 실행될 때** 마다 데이터의 **크기가 절반 감소**하는 알고리즘. (log의 지수는 항상 2) binary search tree에서 탐색할때 노드를 이동할 때마다 경우의 수가 절반으로 줄어듬. 
     
-    ex) `binary search tree(BTS)` ,  `퀵 / 병합 / 힙 정렬` 
+    ex) `binary search tree(BST)` ,  `퀵 / 병합 / 힙 정렬` 
     
 3. **O(N) [linear complexity]**
     
